2015-02-16  Antti Koivisto  <antti@apple.com>

        Develop/Disable Caches does not properly disable disk cache
        https://bugs.webkit.org/show_bug.cgi?id=141636

        Reviewed by Anders Carlsson.

        Make testRunner.setCacheModel() use the WKContext interface so the model gets passed to
        the network process too.

        This makes setCacheModel asynchronous but there don't seem to be any tests that expect otherwise.

        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::beginTesting):
        (WTR::InjectedBundle::setCacheModel):
        * WebKitTestRunner/InjectedBundle/InjectedBundle.h:
        * WebKitTestRunner/InjectedBundle/TestRunner.cpp:

            Forward to TestController.

        (WTR::TestRunner::setCacheModel):
        * WebKitTestRunner/TestInvocation.cpp:
        (WTR::TestInvocation::didReceiveMessageFromInjectedBundle):

2015-02-16  Andrzej Badowski  <a.badowski@samsung.com>

        Unreviewed. Add myself as a committer.

        * Scripts/webkitpy/common/config/contributors.json:

2015-02-15  David Kilzer  <ddkilzer@apple.com>

        REGRESSION (r180082): WebCore Debug builds fail on Mavericks due to weak export symbols
        <http://webkit.org/b/141607>

        * Scripts/check-for-weak-vtables-and-externals: Ignore weak
        externals in Source/WebCore/Configurations/WebCore.unexp when
        building with Xcode 5.x.
        (readXcode5SymbolsToIgnore): Add.

2015-02-15  KwangHyuk Kim  <hyuki.kim@samsung.com>

        [EFL] fix Evas GL engine error.
        https://bugs.webkit.org/show_bug.cgi?id=141621

        Reviewed by Gyuyoung Kim.

        As new elm engine api was added from efl 1.10, replace elm_config_preferred_engine_set with elm_config_accel_preference_set.

        * MiniBrowser/efl/main.c:
        (elm_main):

2015-02-14  Csaba Osztrogonác  <ossy@webkit.org>

        [buildbot] Enable run-api-tests on release Mac bots